--- a/public/rwd-layout.css
+++ b/public/rwd-layout.css
@@ -1,57 +1,121 @@
-body{background-color: #000}
+body{background-color: #fff}
 
 .banner {
-    color: #fff;
-    font-size: 24px;
+    /* background-color: rgb(0, 0, 77); */
+    font-size: 14px;
+
     display:flex;    
+    /* 切板內水平排列 */
+    align-items: center; /*垂直對齊*/
+
 }
 
-.user{
-    color: #fff;
-    font-size: 12;
-    text-align: right;
+.outlink{
+    width: 50%;
 }
 
-.list{
-    display:flex;
-    justify-content: right;
-}
-
-.product{
-    flex:none;width: 100px;margin:10px;
-    border: 2px solid #ffffff;
-    background-color: #000;
-    color: #fff;
-}
-
-.imgs img {
-    text-align: right;
-    width: 1250px;
-    height:auto
-}
-
-.bottom{
-    text-align: right;
+.lang{
+    flex:none; /* 固定配置 */
+    width: 50%;
+    text-align: right; /* 文字水平靠右  */
+    height:28px;
 }
 
 .icon{
-    width:14px;
-    height:14px
+    width:24px;
+    height:24px;
 }
+
+.profile{
+    display: flex;
+    justify-content: center; /*區塊置中*/
+    align-items: center; /*垂直對齊*/
+    height: 500px; /* 垂直高度 */
+    background-color: #eee;
+}
+
+.name{
+    width: auto;
+
+}
+
+.logo{
+    width: 600px;   
+    text-align: center;
+}
+
+
+
+.subsite{
+    justify-content: center; /*區塊置中*/
+    align-items: center; /*垂直對齊*/   
+}
+
+.pageslift{
+    display:flex;    
+    margin: 20px; /* 每個切板四邊間格20px */
+    justify-content: center; /*區塊置中*/
+}
+
+.pagesright{
+    display:flex;    
+    margin: 20px; /* 每個切板四邊間格20px */
+    justify-content: center; /*區塊置中*/
+}
+
+.photo{
+    text-align: right;
+    justify-content: center; /*區塊置中*/
+    width: 50%;
+}
+
+.photor{
+    text-align: left;
+    justify-content: center; /*區塊置中*/
+    width: 50%;
+}
+
+.text{
+    width: 640px; /*剩下空間填滿*/
+    margin: 50px;
+
+    background-color: aliceblue;
+}
+
+.textr{
+    margin: 50px;
+    width: 640px;
+    text-align: right;
+    background-color: aliceblue;
+}
+
+
+
+.buttom{
+    background-color: azure;
+    justify-content: center; /*區塊置中*/
+}
+
+.skill{
+    text-align: center;
+}
+
+
 
 @media (max-width:1250px) {
         /*當螢幕寬度低於1250*/
-    .list{
+    .subsite{
         flex-wrap: wrap; /*依照寬度換行*/
+        height: 1200px;
     }
-    .product{
-        width:45%; 
-    }
+
 }
 
-@media (max-width:500px) {
-    /*當螢幕寬度低於500 套用該區CSS*/
-    .product{
-        width: 90%; 
+@media (max-width:840px) {
+    /*當螢幕寬度低於700 套用該區CSS*/
+    .subsite{
+        height: 2400px;
+        flex-wrap: wrap; /*依照寬度換行*/        
     }
+
 }
